[project]
name = "r82labs-analytics-service"
version = "0.0.1"
description = ""
authors = [
    {name = "r82labs-ronan",email = "ronan@r82labs.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "polars (>=1.33.1,<2.0.0)",
    "r82labs-analytics (>=0.0.1,<0.0.2)"
]

[tool.poetry]
packages = [{include = "app", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
